Added in model, view, and controller base. Greg can move left if left arrow is pressed.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,3 +2,10 @@ body {
     background-color: yellow;
     color: blue;
 }
+
+#greg {
+    position: absolute;
+    left: 200px;
+    top: 200px;   
+    content:url("../images/ud.png");
+}
