Added continuous movement. Press arrow keys to change direction. Press s to stop.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -7,5 +7,5 @@ body {
     position: absolute;
     left: 200px;
     top: 200px;   
-    content:url("../images/ud.png");
+    content:url("../images/greg.png");
 }
