--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,3 +11,12 @@ body {
     position: absolute;
     content:url("../images/python.png");
 }
+
+#maze {
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    border: 4px solid black;
+}
