Added maze as a simple centered background

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,5 +1,8 @@
 body {
     background-color: white;
+    background-image: url("../images/gregman-maze.png");
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 
 #greg {
