Switched background to black

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: black;
     background-image: url("../images/gregman-maze.png");
     background-repeat: no-repeat;
     background-position: center top;
