--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,14 +6,14 @@ body {
 }
 
 #greg {
-    /*position: absolute;*/ 
+    position: absolute;
     content:url("../images/greg.png");
     width: 35px;
     height: 40px;
 }
 
 .python {
-    /*position: absolute;*/ 
+    position: absolute;
     content:url("../images/python.png");
     width: 30px;
     height: 30px;
