--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,8 @@
 body {
     background-color: black;
-    /*background-image: url("../images/gregman-maze.png");
+    background-image: url("../images/gregman-maze.png");
     background-repeat: no-repeat;
-    background-position: center top;*/
+    background-position: left top;
 }
 
 #greg {
@@ -17,4 +17,13 @@ body {
     content:url("../images/python.png");
     width: 30px;
     height: 30px;
+}
+
+#debug_light {
+    content:url("../images/white-circle.png");
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 300px;
+    left: 500px;
 }
