--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,7 +5,7 @@ body {
     background-position: center top;*/ 
 }
 
-#greg {
+.greg {
     position: absolute;
     content:url("../images/greg.png");
     width: 35px;
