--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -49,3 +49,10 @@ body {
     left: 650px;
     top: 400px;
 }
+
+.semicolon {
+    position: absolute;
+    content:url("../images/Semicolon.png");
+    width: 3px;
+    height: 13px;
+}
