Added powerup image and renamed pellet

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -63,7 +63,7 @@ body {
 
 .semicolon {
     position: absolute;
-    content:url("../images/GregMan\ Semicolon.png");
+    content:url("../images/pellet.png");
     width: 4px;
     height: 13px;
 }
