--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -32,14 +32,14 @@ body {
     display: block;  
 } */
 
-#debug_light {
+/*#debug_light {
     content:url("../images/white-circle.png");
     position: absolute;
     width: 30px;
     height: 30px;
     top: 300px;
     left: 900px;
-}
+} */
 
 #python1 {
     left: 34px;
