--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -20,7 +20,6 @@ body {
 
 }
 
-
 #greg {
     left: 413px;
     top: 374px;
@@ -85,28 +84,50 @@ body {
     z-index: 1;
 }
 
-#end {
-    left: 0;
-    top: 0;
-    position: absolute;
+#endContainer {
+    position: relative;
     width: 100%;
     height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 4;
+    margin-top: 0;
+}
+
+#restart {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    -ms-transform: translate(-50%, -40%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.endImage {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: relative;
     z-index: 4;
 }
 
-.endScreen {
+#endScreen {
     content:url("../images/endScreen.png");
 }
 
-.winnerEndScreen {
-    position: absolute;
+#winnerEndScreen {
     content:url("../images/WinnerEndScreen.png");
 
 }
+
 #play {
     width: 90px;
-}
-
-#status {
     z-index: 5;
 }
+
