--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -34,6 +34,14 @@ body {
     z-index: 2;
 }
 
+.scaredPython {
+    position: absolute;
+    content:url("../images/python-scared.png");
+    width: 30px;
+    height: 30px;
+    z-index: 2;
+}
+
 /* .maze{
     margin-left: auto; 
     margin-right: auto; 
