Greg image now flips direction when going left/right.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -141,3 +141,11 @@ body {
     z-index: 5;
 }
 
+.flipped {
+    transform: scale(-1, 1);
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -khtml-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+}
