Moved button and game info to right of maze. Lives look a little weird, should be fixed.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -149,3 +149,9 @@ body {
     -khtml-transform: scale(-1, 1);
     -ms-transform: scale(-1, 1);
 }
+
+#status {
+    position: absolute;
+    top: 10px;
+    left: 880px;
+}
