MOdified width of end game image

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -129,11 +129,12 @@ body {
 
 #endScreen {
     content:url("../images/endScreen.png");
+    width: 90%;
 }
 
 #winnerEndScreen {
     content:url("../images/WinnerEndScreen.png");
-
+    width: 90%;
 }
 
 #play {
