--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,7 +2,7 @@
     background-color: black;
     background-image: url("../images/gregman-maze.png");
     background-repeat: no-repeat;
-    background-position: left top;
+    background-position: center top;
 }
 .open{
     background-color: black; 
@@ -25,8 +25,6 @@
 }
 
 #greg {
-    left: 413px;
-    top: 374px;
     z-index: 2;
 }
 
@@ -61,26 +59,6 @@
     top: 300px;
     left: 900px;
 } */
-
-#python0 {
-    left: 34px;
-    top: 31px;
-}
-
-#python1 {
-    left: 793px;
-    top: 31px;
-}
-
-#python2 {
-    left: 34px;
-    top: 782px;
-}
-
-#python3 {
-    left: 793px;
-    top: 782px;
-}
 
 .semicolon {
     position: absolute;
